<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.unal.larim.GUI.ParticipantActivity">
    <item
        android:id="@+id/action_busqueda"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/participant_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/item_facebook"
        android:icon="@drawable/facebook"
        android:title="@string/follows_us_in_facebook"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_twitter"
        android:icon="@drawable/twitter"
        android:title="@string/follows_us_in_twitter"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_youtube"
        android:icon="@drawable/youtube"
        android:title="@string/watch_in_youtube"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_credits"
        android:icon="@drawable/ic_credits_24dp"
        android:title="@string/title_activity_credits"
        app:showAsAction="ifRoom"/>
</menu>
