<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GUI.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:scaleType="fitCenter"
            android:src="@drawable/fondoinf2"/>

        <TableLayout
            android:id="@+id/menuTable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:paddingLeft="10dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    style="@style/ButtonBlueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="events"
                    android:text="@string/main_menu_colombia"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/textView1"
                    style="@style/ButtonBlueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="welcome"
                    android:text="@string/main_menu_1"/>
                <Button
                    android:id="@+id/textView4"
                    style="@style/ButtonYellowStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="details"
                    android:text="@string/main_menu_5"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/textView2"
                    style="@style/ButtonBlueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="program"
                    android:text="@string/main_menu_2"/>
                <Button
                    android:id="@+id/textView5"
                    style="@style/ButtonYellowStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="map"
                    android:text="@string/main_menu_3"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/textView3"
                    style="@style/ButtonBlueStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="site"
                    android:text="@string/main_menu_4"/>
                <Button
                    android:id="@+id/textView6"
                    style="@style/ButtonYellowStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="sponsors"
                    android:text="@string/main_menu_6"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:adjustViewBounds="true"
        android:elevation="2dp"
        android:onClick="news"
        android:src="@drawable/ic_calendar"
        app:layout_anchor="@id/menuTable"
        app:layout_anchorGravity="top|right|end"/>

</android.support.design.widget.CoordinatorLayout>